...
        <Button
          className="w-full"
          name="unit-continue"
          kind="purple"
          onPress={() => props.dispatch(Thunk_pushScreen("setupequipment"))}
        >
          Continue
        </Button>
      </View>
    </SafeAreaView>
  );
}

