...
        <Button
          className="w-full flex-row justify-center"
          name="get-started"
          kind="purple"
          onPress={() => props.dispatch(Thunk_pushScreen("units"))}
        >
          <Text className="text-text-alwayswhite font-semibold text-xs">Get started</Text>
          <View className="ml-2">
            <IconArrowRight color="white" />
          </View>
        </Button>
        <View className="mt-2">
          <Button
...
            name="have-account"
            kind="transparent-purple"
            onPress={() => {
              // TODO: account modal
            }}
          >
            I have an account
          </Button>
        </View>
      </View>
    </SafeAreaView>
  );
}
...
