...
            />
          </View>
        ))}
      </View>
      <View className="mt-4 pb-8">
        <LinkButton
          name="week-insights-show-planner-settings"
          onPress={() => navigation.navigate("PlannerSettingsSheet")}
        >
          Change Set Range Settings
        </LinkButton>
      </View>
    </ScrollView>
...
