...
            <IconFire size={16} color={Tailwind_colors().yellow[600]} />
            <Text className="text-sm font-semibold" style={{ marginTop: 3 }}>
              {formattedRange}
            </Text>
          </View>
          <View className="ml-auto">
            <LinkButton name="toggle-week-insights" onPress={props.onShowMore}>
              Show More
            </LinkButton>
          </View>
        </View>
        <View className="flex-row justify-between mt-1" style={{ marginLeft: 2 }}>
          <WeekInsightsProperty
...
