...
            <Button
              kind="purple"
              buttonSize="md"
              disabled={!isEdited || !isValid}
              name="navbar-save-custom-exercise"
              className="p-2 nm-save-custom-exercise"
              data-cy="custom-exercise-create"
              onClick={(e) => {
                e.preventDefault();
                props.onChange("upsert", editCustomExercise, notes);
                goBack("Save custom exercise");
              }}
            >
...
            )}
          </div>
          <div className="mt-4">
            <Button
              buttonSize="sm"
              kind="lightgrayv3"
              name="autofill-muscles"
              className="flex items-center justify-center w-full"
              onClick={async () => {
                if (!isValid) {
                  alert("Please enter a name");
                  return;
                }
...
                  </div>
                ) : (
                  <>
                    <div>
                      <IconAi color={Tailwind.semantic().icon.blue} />
                    </div>
                    <div className="ml-1">Autofill Muscles and Types</div>
                  </>
                )}
              </div>
            </Button>
          </div>
          <div className="pt-2">
...
