...
          </View>
        ))}
        <Pressable
          accessibilityLabel="Add exercise"
          accessibilityRole="button"
          className="p-2"
          data-cy="add-exercise-button"
          onPress={props.onAddExercise}
        >
          <IconPlus2 size={15} color={plusColor} />
        </Pressable>
      </ScrollView>
    </View>
...
