...
          hasDot={hasErrorsInProgram}
          text={translate("Program")}
          onClick={() => props.dispatch(Thunk_pushToEditProgram())}
        />
        <View className="items-center flex-1">
          <Pressable
            data-testid="footer-workout"
            testID="footer-workout"
            className="-mt-scaled-6"
            onPress={() => {
              if (props.navCommon.isOngoingProgress) {
                props.dispatch(Thunk_startProgramDay());
              } else {
...
