...
  };

  return (
    <View>
      <View>
        <View className="items-center pb-2">
          <LinkButton className="text-xs" name="clone-builtin-exercise" onPress={openCloneLibrary}>
            {translate("Clone from another exercise")}
          </LinkButton>
        </View>
        <View>
          <Text className="pb-1 text-sm">
            {translate("Name")}
            <Text className="text-text-error"> *</Text>
          </Text>
          <TextInput
            data-testid="custom-exercise-name-input"
            testID="custom-exercise-name-input"
            defaultValue={editCustomExercise.name}
            placeholder="Super Squat"
            placeholderTextColor={Tailwind_semantic().text.secondarysubtle}
            style={{ minHeight: 40 }}
            className="px-4 py-2 text-base border rounded-lg bg-background-default border-border-prominent text-text-primary"
...
                <Image
                  source={{ uri: editCustomExercise.largeImageUrl ?? editCustomExercise.smallImageUrl }}
                  resizeMode="contain"
                  style={{ height: 192, width: 192 }}
                />
              </Pressable>
              <LinkButton name="custom-exercise-change-image" className="text-xs" onPress={openImageSourceAction}>
                {translate("Change Image")}
              </LinkButton>
            </View>
          ) : (
            <Button
              name="custom-exercise-add-image"
...
          )}
        </View>
        <View className="mt-4">
          <Button
            buttonSize="sm"
            kind="lightgrayv3"
            name="autofill-muscles"
            className="w-full"
            onPress={async () => {
              if (!isValid) {
                Dialog_alert("Please enter a name");
                return;
              }
...
                <View className="flex-row items-center" style={{ minHeight: 24 }}>
                  <IconSpinner width={18} height={18} />
                </View>
              ) : (
                <>
                  <IconAi color={Tailwind_semantic().icon.blue} />
                  <Text className="ml-1 text-sm">{translate("Autofill Muscles and Types")}</Text>
                </>
              )}
            </View>
          </Button>
        </View>
        <View className="pt-2">
...
                settings={props.settings}
              />
            </View>
            <View className="py-2 bg-background-default">
              <Button
                kind="purple"
                data-testid="done-selecting-muscles"
                testID="done-selecting-muscles"
                name="done-selecting-muscles"
                className="w-full"
                buttonSize="md"
                onPress={() => {
                  setIsOpened(false);
...
