...
            )}
          </View>
        </View>
        <View className="pr-4 pl-1" style={{ width: 56 }}>
          <Pressable
            className="items-center justify-center px-3 py-2"
            data-cy="complete-set"
            onPress={() => {
              props.dispatch({
                type: "CompleteSetAction",
                setIndex: props.setIndex,
                entryIndex: props.entryIndex,
                programExercise: props.programExercise,
...
