appId: ${APP_ID}
---
- runFlow: lib/login.yaml
- tapOn:
    id: footer-me
- scrollUntilVisible:
    element:
      id: menu-item-api-keys
    direction: DOWN
    centerElement: true
- tapOn:
    id: menu-item-api-keys
- extendedWaitUntil:
    visible:
      id: create-api-key
    timeout: 10000
- takeScreenshot: ai-and-mcp-api-keys
- tapOn:
    id: create-api-key
- extendedWaitUntil:
    visible:
      id: delete-api-key
    timeout: 10000
- takeScreenshot: ai-and-mcp-api-key-created
- tapOn:
    id: delete-api-key
- tapOn:
    text: "OK"
